@@ -2,8 +2,8 @@ package org.ozsoft.xmlindexer;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.Deque;
+import java.util.LinkedList;
 
 import javax.xml.parsers.SAXParser;
 import javax.xml.parsers.SAXParserFactory;
@@ -13,16 +13,27 @@ import org.xml.sax.SAXException;
 import org.xml.sax.helpers.DefaultHandler;
 
 /**
- * Indexer for XML documents using SAX and XPath-like paths.
+ * Indexer for XML documents. <br />
+ * 
+ * Uses XPath-like index paths like "/Document/Header/Id" and "//author". <br />
+ * 
+ * Supports indexed elements only (no attributes). <br />
+ * 
+ * Implemented using JAXP SAX.
  * 
  * @author Oscar Stigter
  */
 public class XmlIndexer {
 
+    /** JAXP SAX parser. */
     private final SAXParser parser;
 
-    private final XPathHandler handler = new XPathHandler();
+    /** SAX content handler. */
+    private final IndexHandler handler = new IndexHandler();
 
+    /**
+     * Constructs an XmlIndexer.
+     */
     public XmlIndexer() {
         SAXParserFactory factory = SAXParserFactory.newInstance();
         factory.setNamespaceAware(true);
@@ -35,87 +46,116 @@ public class XmlIndexer {
         }
     }
 
+    /**
+     * Indexes an XML document.
+     * 
+     * @param file
+     *            The XML document.
+     * @param indices
+     *            The indices.
+     */
     public void index(File file, Index[] indices) {
         handler.setIndices(indices);
         try {
+            long startTime = System.currentTimeMillis();
             parser.parse(file, handler);
+            long duration = System.currentTimeMillis() - startTime;
+            System.out.format("Document indexed in %d ms\n", duration);
         } catch (IOException e) {
-            System.err.println(e);
+            System.err.println("ERROR: Could not read file: " + e.getMessage());
         } catch (SAXException e) {
-            System.err.println(e);
+            System.err.println("ERROR: Could not parse XML file: " + e.getMessage());
         }
     }
 
-    // ------------------------------------------------------------------------
-    // Inner classes
-    // ------------------------------------------------------------------------
+    /**
+     * SAX content handler collecting the index values.
+     * 
+     * @author Oscar Stigter
+     */
+    private static class IndexHandler extends DefaultHandler {
 
-    private class XPathHandler extends DefaultHandler {
+        /** Stack with hierarchival XML elements, forming the path. */
+        private final Deque<String> elements;
 
-        private final List<String> elements;
+        /** Element text buffer. */
+        private final StringBuilder sb;
 
+        /** The indices. */
         private Index[] indices;
 
-        private StringBuilder sb;
-
-        public XPathHandler() {
-            elements = new ArrayList<String>();
+        /**
+         * Constructs the SAX content handler.
+         */
+        public IndexHandler() {
+            elements = new LinkedList<String>();
+            sb = new StringBuilder();
         }
 
+        /**
+         * Sets the indices.
+         * 
+         * @param indices The indices.
+         */
         public void setIndices(Index[] indices) {
             this.indices = indices;
         }
 
+        /*
+         * (non-Javadoc)
+         * @see org.xml.sax.helpers.DefaultHandler#startElement(java.lang.String, java.lang.String, java.lang.String, org.xml.sax.Attributes)
+         */
         @Override
         public void startElement(String uri, String localName, String qName, Attributes attr) throws SAXException {
-            System.out.println("Start Element: " + localName);
             elements.add(localName);
-            sb = new StringBuilder();
+            sb.delete(0, sb.length());
         }
 
+        /*
+         * (non-Javadoc)
+         * @see org.xml.sax.helpers.DefaultHandler#endElement(java.lang.String, java.lang.String, java.lang.String)
+         */
         @Override
         public void endElement(String uri, String localName, String qName) throws SAXException {
-            System.out.println("End Element:   " + localName);
-            String path = getCurrentPath();
-            System.out.println("Path: " + path);
+            final String path = getCurrentPath();
             for (Index index : indices) {
-                System.out.println("Index path: " + index.getPath());
-                boolean matches = false;
                 if (index.getPath().startsWith("//")) {
-                    if (path.endsWith(index.getPath())) {
-                        String text = sb.toString().trim();
-                        if (text.length() != 0) {
+                    // Descendant-style path.
+                    if (path.endsWith(index.getPath().substring(1))) {
+                        final String text = sb.toString().trim();
+                        if (text.length() > 0) {
                             index.setValue(text);
                         }
                     }
                 } else {
+                    // Absolute path.
                     if (path.equals(index.getPath())) {
-                        String text = sb.toString().trim();
+                        final String text = sb.toString().trim();
                         if (text.length() != 0) {
                             index.setValue(text);
                         }
                     }
                 }
-                if (matches) {
-
-                }
             }
-            elements.remove(elements.size() - 1);
-            sb = new StringBuilder();
+            elements.removeLast();
         }
 
+        /*
+         * (non-Javadoc)
+         * @see org.xml.sax.helpers.DefaultHandler#characters(char[], int, int)
+         */
         @Override
         public void characters(char[] buffer, int offset, int length) throws SAXException {
             sb.append(buffer, offset, length);
         }
 
         private String getCurrentPath() {
-            StringBuilder sb2 = new StringBuilder();
+            final StringBuilder path = new StringBuilder();
             for (String element : elements) {
-                sb2.append('/');
-                sb2.append(element);
+                path.append('/');
+                path.append(element);
             }
-            return sb2.toString();
+            return path.toString();
         }
 
     }
